--- a/partials/sidebar.html
+++ b/partials/sidebar.html
@@ -1,21 +1,18 @@
-
 <aside class="sidebar-fixed">
   <div class="sidebar-header"><a href="/"><img src="/assets/img/logo.svg" alt="Logo"/></a></div>
   <a class="sidebar-sale" href="/category.html">
     <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="2"><path d="M19 5l-7 7-4-4-5 5"/><path d="M14 7h7v7"/></svg>
-    ТОВАРЫ СО СКИДКОЙ
+    ТОВАРЫ СО СКИДКОЙ И НОВИНКИ
   </a>
   <ul class="sidebar-list">
-    <li class="sidebar-item"><div class="row"><span class="i i-chair"></span><span class="title">КРЕСЛА</span></div><span class="chev">›</span></li>
-    <li class="sidebar-item"><div class="row"><span class="i i-stool"></span><span class="title">СТУЛЬЯ</span></div><span class="chev">›</span></li>
-    <li class="sidebar-item"><div class="row"><span class="i i-table"></span><span class="title">СТОЛЫ</span></div><span class="chev">›</span></li>
-    <li class="sidebar-item"><div class="row"><span class="i i-sofa"></span><span class="title">МЯГКАЯ МЕБЕЛЬ</span></div><span class="chev">›</span></li>
-    <li class="sidebar-item"><div class="row"><span class="i i-cabinet"></span><span class="title">КОРПУСНАЯ МЕБЕЛЬ</span></div><span class="chev">›</span></li>
-    <li class="sidebar-item"><div class="row"><span class="i i-bed"></span><span class="title">КРОВАТИ</span></div><span class="chev">›</span></li>
-    <li class="sidebar-item"><div class="row"><span class="i i-garden"></span><span class="title">ДАЧА И САД</span></div><span class="chev">›</span></li>
-    <li class="sidebar-item"><div class="row"><span class="i i-cafe"></span><span class="title">МЕБЕЛЬ ДЛЯ КАФЕ</span></div><span class="chev">›</span></li>
-    <li class="sidebar-item"><div class="row"><span class="i i-office"></span><span class="title">ТОВАРЫ ДЛЯ ОФИСА</span></div><span class="chev">›</span></li>
-    <li class="sidebar-item"><div class="row"><span class="i i-home"></span><span class="title">ТОВАРЫ ДЛЯ ДОМА</span></div><span class="chev">›</span></li>
-    <li class="sidebar-item"><div class="row"><span class="i i-leather"></span><span class="title">ИЗДЕЛИЯ ИЗ КОЖИ</span></div><span class="chev">›</span></li>
+    <li><a class="sidebar-item" href="/category.html?cat=paper"><span class="row"><span class="i i-paper"></span><span class="title">Бумага и бумажная продукция</span></span><span class="chev">›</span></a></li>
+    <li><a class="sidebar-item" href="/category.html?cat=stationery"><span class="row"><span class="i i-stationery"></span><span class="title">Канцелярские товары</span></span><span class="chev">›</span></a></li>
+    <li><a class="sidebar-item" href="/category.html?cat=household"><span class="row"><span class="i i-household"></span><span class="title">Хозяйственные товары</span></span><span class="chev">›</span></a></li>
+    <li><a class="sidebar-item" href="/category.html?cat=food"><span class="row"><span class="i i-food"></span><span class="title">Продукты питания</span></span><span class="chev">›</span></a></li>
+    <li><a class="sidebar-item" href="/category.html?cat=tech"><span class="row"><span class="i i-tech"></span><span class="title">Техника и электроника</span></span><span class="chev">›</span></a></li>
+    <li><a class="sidebar-item" href="/category.html?cat=toner"><span class="row"><span class="i i-toner"></span><span class="title">Картриджи и тонер</span></span><span class="chev">›</span></a></li>
+    <li><a class="sidebar-item" href="/category.html?cat=furniture"><span class="row"><span class="i i-furniture"></span><span class="title">Мебель и интерьер</span></span><span class="chev">›</span></a></li>
+    <li><a class="sidebar-item" href="/category.html?cat=gifts"><span class="row"><span class="i i-gift"></span><span class="title">Подарки и сувиниры</span></span><span class="chev">›</span></a></li>
+    <li><a class="sidebar-item" href="/category.html?cat=creative"><span class="row"><span class="i i-creative"></span><span class="title">Товары для творчества и учебы</span></span><span class="chev">›</span></a></li>
   </ul>
 </aside>
