ктестовые товары, корзина и админ панель

--- a/partials/header.html
+++ b/partials/header.html
@@ -20,7 +20,7 @@
       <div class="nav">
         <a class="item" href="/admin/login.html">Войти</a>
         <a class="item" href="#">Избранное</a>
-        <a class="item" href="#">0 шт · 0 тг</a>
+        <a class="item" id="cart-link" href="/cart.html">0 шт</a>
       </div>
     </div>
   </div>
