--- a/partials/header.html
+++ b/partials/header.html
@@ -11,15 +11,15 @@
         <div class="item">📍 Город: <strong>&nbsp;Алматы</strong></div>
         <a class="item" href="#">Магазины</a>
         <a class="item" href="#">Оплата</a>
-        <a class="item" href="#">Доставка</a>
-        <span class="item pill">РУС · ҚАЗ</span>
+      
       </nav>
       <nav class="nav">
         <span id="loginState"></span>
-        <a class="item" id="admin-link" href="/admin/dashboard.html" style="display:none">Админ</a>
-        <a class="item" href="/admin/login.html">Войти</a>
+        <a class="item" id="admin-link" href="/admin/dashboard.html" style="display:none">Админ панель</a>
+        <a class="item" id="logout-link" href="#" style="display:none">Выйти</a>
+        <a class="item" id="login-link" href="/admin/login.html">Войти</a>
         <a class="item" href="#">Избранное</a>
-        <a class="item" id="cart-link" href="/cart.html">0 шт</a>
+        <a class="item" id="cart-link" href="/cart.html">Корзина: 0 шт - 0 тг</a>
       </nav>
     </div>
   </div>
