--- a/partials/footer.html
+++ b/partials/footer.html
@@ -7,7 +7,7 @@
     </div>
     <div><h4>Покупателям</h4><ul><li><a href="#">Как оформить заказ</a></li><li><a href="#">Оплата</a></li><li><a href="#">Доставка</a></li><li><a href="#">Возврат товара</a></li></ul></div>
     <div><h4>Компания</h4><ul><li><a href="#">О нас</a></li><li><a href="#">Контакты</a></li><li><a href="#">Магазины</a></li><li><a href="#">Карьера</a></li></ul></div>
-    <div><h4>Контакты</h4><ul><li>Алматы, ул. Пример, 1</li><li>+7 701 000 00 00</li><li><a href="mailto:info@example.kz">info@example.kz</a></li><li>Ежедневно 09:00–20:00</li></ul></div>
+    <div><h4>Контакты</h4><ul><li>Алматы, ул. Пример, 1</li><li>+7 (708) 848‑81‑01</li><li><a href="mailto:info@example.kz">info@example.kz</a></li><li>Ежедневно 09:00–20:00</li></ul></div>
   </div>
-  <div class="container bottom"><div>© 2025 Ваша компания</div><div>Разработка: adn.office_shop</div></div>
+  <div class="container bottom"><div>© 2025 adn.office_shop</div><div>Разработка: adn.office_shop</div></div>
 </footer>
